--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"    
+    "start": "nodemon index.js",
+    "deploy": "heroku builds:create -a quasargram-backend007"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "firebase-admin": "^10.0.1",
+    "nodemon": "^2.0.15"
   }
 }
