--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "busboy": "^1.4.0",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.1",
     "nodemon": "^2.0.15"
