--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "busboy": "^1.4.0",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid-v4": "^0.1.0"
   }
 }
